--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ backend/*.exe
 
 
 backend/silly-syntax-backend-bonanza
+silly-syntax-backend-bonanza/bonanza.db
+silly-syntax-backend-bonanza/silly-syntax-backend-bonanza
+*.db
