--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,8 @@ backend/*.exe
 
 
 
-backend/silly-syntax-backend-bonanza
+silly-syntax-backend-bonanza/silly-syntax-backend-bonanza/*
+*.db
+*.zip
+backend/silly-syntax-backend-bonanza/silly-syntax-backend-bonanza
+backend/plugins/
